# CDA

./: CMakeLists.txt  README.md
da/: CDAGenerator.cpp  CDAGenerator.h
experiments/: experiments-smt.sh
experiments/models/: aircraft-1-2-cda-smt-t1800-r10-NEW.res  aircraft-1-2-cda-smt-t1800-r10.res  aircraft-1-2-cda-smt-t600-r10.res  banking1-1-2-cda-smt-t1800-r10-NEW.res  (+16 more)
include/: Constraint.h  FileParser.cpp  FileParser.h  Interaction.h  OptionHandler.cpp  OptionHandler.h  Parameter.h  Printer.cpp  Printer.h  SMTUtil.h  Sut.cpp  Sut.h  TestCase.h  Util.h  Value.h
inputs/: Apl-3.cca  Car-3.cca  Graph-product-line-fm-3.cca  REAL-FM-12-3.cca  aircraft-3.cca  aircraft.cca  aircraft_fm-3.cca  banking1-3.cca  banking2-3.cca  bugzilla-3.cca  comm_protocol-3.cca  concurrency-3.cca  connector_fm-3.cca  healthcare1-3.cca  healthcare2-3.cca  healthcare3-3.cca  healthcare4-3.cca  insurance-3.cca  mobilephone-3.cca  mobilephone-4.cca  mobilephone-no-3.cca  mobilephone.cca  movies_app_fm-3.cca  movies_not-3.cca  network_mgmt-3.cca  processor_comm1-3.cca  processor_comm2-3.cca  reserve  services-3.cca  stack_fm-3.cca  storage1-3.cca  storage2-3.cca  storage3-3.cca  storage4-3.cca  storage5-3.cca  system_mgmt-3.cca  telecom-3.cca  web-3.cca  web-no-3.cca  zzzapache-3.cca  (+1 more)
models/: aircraft.txt  bugzilla.txt  car.txt  medicitries.txt  medicitries_small.txt  mobilephone-no.txt  mobilephone.txt  movie.txt  spins.txt  spinv.txt  uClinux.txt  web-no.txt  web.a-smt.res  zzzapache.txt  zzzgcc.txt
src/: FunctionSwitcher.cpp  FunctionSwitcher.h  Integration.cpp
(+194 files in other folders)
